package ru.training.karaf.rest;

import ru.training.karaf.model.User;
import ru.training.karaf.repo.UserRepo;
import ru.training.karaf.rest.dto.SensorDTO;
import ru.training.karaf.rest.dto.UserDTO;

import javax.validation.ValidationException;
import javax.ws.rs.NotFoundException;
import javax.ws.rs.core.Response;
import java.util.List;
import java.util.Optional;
import java.util.stream.Collectors;

    public class UserRestServiceImpl implements UserRestService {

    private UserRepo repo;

    public void setRepo(UserRepo repo) {
        this.repo = repo;
    }

    @Override
    public List<UserDTO> getAll(List<String> by, List<String> order, List<String> field, List<String> cond, List<String> value, int pg,int sz) {
        return repo.getAll(by, order, field, cond, value, pg, sz).stream().map(UserDTO::new).collect(Collectors.toList());
    }

    @Override
    public UserDTO create(UserDTO user) {
        if (repo.loginIsPresent(user.getLogin())) {
            throw new ValidationException("login must be unique");
        }
        return repo.create(user).map(UserDTO::new).orElseThrow(() -> new ValidationException("login must be unique"));
    }

   @Override
    public UserDTO update(long id, UserDTO user) {
        Optional<? extends User> u = repo.update(id, user);
        return u.map(UserDTO::new)
                .orElseThrow(() -> new NotFoundException(Response.status(Response.Status.NOT_FOUND).build()));
    }

   @Override
    public UserDTO get(long id) {
        return repo.get(id).map(UserDTO::new)
                .orElseThrow(() -> new NotFoundException(Response.status(Response.Status.NOT_FOUND).build()));
    }

    @Override
    public UserDTO getByLogin(String login) {
        return repo.getByLogin(login).map(UserDTO::new)
                .orElseThrow(() -> new NotFoundException(Response.status(Response.Status.NOT_FOUND).build()));
    }

    @Override
    public void delete(long id) {
        repo.delete(id)
                .orElseThrow(() -> new NotFoundException(Response.status(Response.Status.NOT_FOUND).build()));

    }

        @Override
        public UserDTO addSensors(long id, List<Long> sensorIds) {
            return repo.addSensors(id, sensorIds).map(UserDTO::new).orElseThrow(() ->
                    new NotFoundException(Response.status(Response.Status.NOT_FOUND).build()));
        }
    }
