@startuml

title __REST's Class Diagram__\n

  namespace ru.training.karaf.rest {
    class ru.training.karaf.rest.ClimateParameterRestServiceImpl {
        + addUnits()
        + create()
        + delete()
        + get()
        + getAll()
        + getByName()
        + setRepo()
        + update()
    }
  }
  

  namespace ru.training.karaf.rest {
    class ru.training.karaf.rest.LocationRestServiceImpl {
        + create()
        + delete()
        + get()
        + getAll()
        + setRepo()
        + update()
    }
  }
  

  namespace ru.training.karaf.rest {
    class ru.training.karaf.rest.SensorRestServiceImpl {
        + addUsers()
        + create()
        + delete()
        + get()
        + getAll()
        + setLocation()
        + setRepo()
        + setSensorType()
        + update()
    }
  }
  

  namespace ru.training.karaf.rest {
    class ru.training.karaf.rest.SensorTypeRestServiceImpl {
        + addParameters()
        + create()
        + delete()
        + get()
        + getAll()
        + setRepo()
        + update()
    }
  }
  

  namespace ru.training.karaf.rest {
    class ru.training.karaf.rest.UnitRestServiceImpl {
        + create()
        + delete()
        + get()
        + getAll()
        + setRepo()
        + update()
    }
  }
  

  namespace ru.training.karaf.rest {
    class ru.training.karaf.rest.UserRestServiceImpl {
        + create()
        + delete()
        + get()
        + getAll()
        + setRepo()
        + update()
    }
  }
  

  ru.training.karaf.rest.ClimateParameterRestServiceImpl .up.|> ru.training.karaf.rest.ClimateParameterRestService
  ru.training.karaf.rest.ClimateParameterRestServiceImpl o-- ru.training.karaf.repo.ClimateParameterRepo : repo
  ru.training.karaf.rest.LocationRestServiceImpl .up.|> ru.training.karaf.rest.LocationRestService
  ru.training.karaf.rest.LocationRestServiceImpl o-- ru.training.karaf.repo.LocationRepo : repo
  ru.training.karaf.rest.SensorRestServiceImpl .up.|> ru.training.karaf.rest.SensorRestService
  ru.training.karaf.rest.SensorRestServiceImpl o-- ru.training.karaf.repo.SensorRepo : repo
  ru.training.karaf.rest.SensorTypeRestServiceImpl .up.|> ru.training.karaf.rest.SensorTypeRestService
  ru.training.karaf.rest.SensorTypeRestServiceImpl o-- ru.training.karaf.repo.SensorTypeRepo : repo
  ru.training.karaf.rest.UnitRestServiceImpl .up.|> ru.training.karaf.rest.UnitRestService
  ru.training.karaf.rest.UnitRestServiceImpl o-- ru.training.karaf.repo.UnitRepo : repo
  ru.training.karaf.rest.UserRestServiceImpl .up.|> ru.training.karaf.rest.UserRestService
  ru.training.karaf.rest.UserRestServiceImpl o-- ru.training.karaf.repo.UserRepo : repo


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
